Update and rename index1.html to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
   </div>
 
   <script>
-    const wsUrl = 'wss://twojadomena.onrender.com'; // <-- podmień na swój adres WebSocket!
+    const wsUrl = 'wss://komunikator-web.onrender.com'; // <-- podmień na swój adres WebSocket!
     const ws = new WebSocket(wsUrl);
 
     // Elementy DOM
