--- a/public/index.html
+++ b/public/index.html
@@ -3,337 +3,355 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Komunikator</title>
+  <title>Bezpieczny Komunikator - Styl Discord</title>
   <style>
     * {
       box-sizing: border-box;
     }
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      color: #fff;
+      padding: 0;
+      background-color: #36393f;
+      color: #dcddde;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
       height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .container {
-      width: 380px;
-      max-width: 95vw;
-      background: rgba(0,0,0,0.5);
-      border-radius: 12px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.7);
-      backdrop-filter: blur(8px);
-      display: flex;
-      flex-direction: column;
       overflow: hidden;
     }
-    header {
-      padding: 16px;
-      background: rgba(255,255,255,0.15);
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: 700;
-      border-bottom: 1px solid rgba(255,255,255,0.2);
-      user-select: none;
-    }
-    #login-form, #chat-container {
-      padding: 16px;
+    #login, #loginUser {
+      margin: auto;
+      background-color: #2f3136;
+      border-radius: 8px;
+      padding: 40px 30px;
+      width: 360px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       display: flex;
       flex-direction: column;
+      align-items: center;
     }
-    #login-form input, #login-form button {
-      padding: 10px 12px;
-      margin: 6px 0;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: none;
-      outline: none;
-    }
-    #login-form input {
-      background: rgba(255,255,255,0.15);
-      color: white;
-      border: 1px solid rgba(255,255,255,0.3);
-    }
-    #login-form input::placeholder {
-      color: #eee;
-    }
-    #login-form button {
-      background: #9b59b6;
-      color: white;
-      cursor: pointer;
-      font-weight: 600;
-      border: none;
-      transition: background-color 0.3s ease;
-    }
-    #login-form button:hover:not(:disabled) {
-      background: #8e44ad;
-    }
-    #login-form button:disabled {
-      background: #6c3483;
-      cursor: default;
-    }
-    #error-msg {
-      color: #f44336;
-      font-size: 0.9rem;
-      height: 20px;
-      margin-bottom: 8px;
+    h3 {
+      color: #fff;
+      margin-bottom: 24px;
+      font-weight: 700;
+      font-size: 1.6rem;
       user-select: none;
     }
-
+    input {
+      width: 100%;
+      background-color: #202225;
+      border: none;
+      border-radius: 4px;
+      padding: 12px 15px;
+      margin-bottom: 16px;
+      color: #dcddde;
+      font-size: 1rem;
+      transition: background-color 0.15s ease;
+    }
+    input::placeholder {
+      color: #72767d;
+    }
+    input:focus {
+      outline: none;
+      background-color: #2c2f33;
+    }
+    button {
+      width: 100%;
+      background-color: #5865f2;
+      color: white;
+      font-weight: 700;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      padding: 12px 0;
+      cursor: pointer;
+      user-select: none;
+      transition: background-color 0.2s ease;
+    }
+    button:hover {
+      background-color: #4752c4;
+    }
+    button:disabled {
+      opacity: 0.6;
+      cursor: default;
+    }
+    #accessError, #loginError {
+      width: 100%;
+      text-align: center;
+      color: #f04747;
+      margin-top: 8px;
+      font-weight: 600;
+      font-size: 0.9rem;
+      min-height: 1.1em;
+      user-select: none;
+    }
+    #chat {
+      display: none;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      background-color: #36393f;
+    }
     #messages {
-      flex: 1;
+      flex-grow: 1;
       overflow-y: auto;
-      padding: 16px;
-      background: rgba(0,0,0,0.3);
-      border-radius: 8px;
-      font-size: 0.95rem;
-      margin-bottom: 12px;
+      padding: 20px;
+      scroll-behavior: smooth;
       scrollbar-width: thin;
-      scrollbar-color: #9b59b6 transparent;
+      scrollbar-color: #202225 transparent;
     }
     #messages::-webkit-scrollbar {
       width: 8px;
+      background-color: transparent;
     }
     #messages::-webkit-scrollbar-thumb {
-      background-color: #9b59b6;
+      background-color: #202225;
       border-radius: 4px;
     }
     .message {
-      margin-bottom: 12px;
-      padding: 10px 14px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 10px;
-      word-break: break-word;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-      animation: fadeIn 0.3s ease forwards;
-    }
-    .message.self {
-      background: #9b59b6;
-      color: white;
-      align-self: flex-end;
-      box-shadow: 0 2px 8px rgba(155, 89, 182, 0.7);
-    }
-    .message .meta {
-      font-size: 0.75rem;
-      opacity: 0.6;
-      margin-bottom: 4px;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      margin-bottom: 16px;
+      max-width: 75%;
+      line-height: 1.3;
+    }
+    .username {
       font-weight: 600;
-    }
-    form#chat-form {
-      display: flex;
-      border-top: 1px solid rgba(255,255,255,0.2);
-      background: rgba(0,0,0,0.4);
-      border-radius: 0 0 12px 12px;
-    }
-    form#chat-form input[type="text"] {
-      flex: 1;
-      border: none;
-      padding: 14px 16px;
-      font-size: 1rem;
-      color: white;
-      background: transparent;
-      outline: none;
+      color: #4f90e2;
+      margin-bottom: 2px;
       user-select: text;
     }
-    form#chat-form button {
-      background: #9b59b6;
-      border: none;
-      color: white;
-      padding: 0 20px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
+    .time {
+      font-size: 0.75rem;
+      color: #72767d;
+      margin-left: 8px;
       user-select: none;
     }
-    form#chat-form button:hover:enabled {
-      background: #8e44ad;
+    .message-text {
+      background-color: #2f3136;
+      padding: 8px 12px;
+      border-radius: 6px;
+      color: #dcddde;
+      word-wrap: break-word;
+      user-select: text;
+      white-space: pre-line;
     }
-    form#chat-form button:disabled {
-      background: #6c3483;
+    .message-header {
+      display: flex;
+      align-items: center;
+    }
+    #inputContainer {
+      display: flex;
+      padding: 16px 20px;
+      background-color: #40444b;
+      border-top: 1px solid #2f3136;
+    }
+    #messageInput {
+      flex-grow: 1;
+      background-color: #292b2f;
+      border: none;
+      border-radius: 4px 0 0 4px;
+      padding: 12px 15px;
+      color: #dcddde;
+      font-size: 1rem;
+      user-select: text;
+      transition: background-color 0.15s ease;
+    }
+    #messageInput::placeholder {
+      color: #72767d;
+    }
+    #messageInput:focus {
+      outline: none;
+      background-color: #3a3c42;
+    }
+    #sendBtn {
+      background-color: #5865f2;
+      border: none;
+      border-radius: 0 4px 4px 0;
+      padding: 0 20px;
+      cursor: pointer;
+      font-weight: 700;
+      color: white;
+      transition: background-color 0.2s ease;
+      user-select: none;
+      font-size: 1rem;
+    }
+    #sendBtn:hover:enabled {
+      background-color: #4752c4;
+    }
+    #sendBtn:disabled {
+      opacity: 0.6;
       cursor: default;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(10px);}
-      to {opacity: 1; transform: translateY(0);}
     }
   </style>
 </head>
 <body>
-  <div class="container" role="main" aria-label="Komunikator czat">
-    <header>Twój Komunikator</header>
+  <!-- Ekran logowania do kodu dostępu -->
+  <div id="login">
+    <h3>Podaj kod dostępu</h3>
+    <input id="accessCodeInput" type="password" placeholder="Kod dostępu" autocomplete="off" />
+    <button id="accessBtn">Dalej</button>
+    <div id="accessError"></div>
+  </div>
 
-    <!-- Formularz logowania -->
-    <form id="login-form" aria-label="Formularz logowania">
-      <div id="error-msg" role="alert" aria-live="assertive"></div>
-      <input type="text" id="access-code" placeholder="Kod dostępu" autocomplete="off" required />
-      <input type="text" id="username" placeholder="Nazwa użytkownika" autocomplete="off" required />
-      <input type="password" id="password" placeholder="Hasło" autocomplete="off" required />
-      <button type="submit">Zaloguj się</button>
-    </form>
+  <!-- Ekran logowania użytkownika -->
+  <div id="loginUser" style="display:none;">
+    <h3>Logowanie</h3>
+    <input id="usernameInput" type="text" placeholder="Nazwa użytkownika" autocomplete="username" />
+    <input id="passwordInput" type="password" placeholder="Hasło" autocomplete="current-password" />
+    <button id="loginBtn">Zaloguj</button>
+    <div id="loginError"></div>
+  </div>
 
-    <!-- Czat, ukryty do czasu zalogowania -->
-    <div id="chat-container" style="display:none; flex-direction: column; height: 480px;">
-      <div id="messages" aria-live="polite" aria-relevant="additions"></div>
-      <form id="chat-form" aria-label="Formularz wysyłania wiadomości">
-        <input id="message-input" type="text" placeholder="Napisz wiadomość..." autocomplete="off" aria-required="true" />
-        <button id="send-btn" type="submit" disabled>Wyślij</button>
-      </form>
+  <!-- Główny czat -->
+  <div id="chat">
+    <div id="messages" role="log" aria-live="polite" aria-relevant="additions"></div>
+    <div id="inputContainer">
+      <input id="messageInput" type="text" placeholder="Napisz wiadomość..." autocomplete="off" />
+      <button id="sendBtn" disabled>Wyślij</button>
     </div>
   </div>
 
-  <script>
-    // --- Stałe użytkowników i kodu dostępu ---
-    const ACCESS_CODE = "ZAQ!2wsx";
-    const USERS = {
-      'yung': '1234',
-      'czarny': '1234'
-    };
+<script>
+  const ws = new WebSocket('wss://komunikator-web.host.replace(/^https?/, '') + ':3000');
+  // Jeśli backend masz na osobnym porcie, to podaj tam adres WebSocket.
 
-    // Elementy DOM
-    const loginForm = document.getElementById('login-form');
-    const errorMsg = document.getElementById('error-msg');
-    const accessCodeInput = document.getElementById('access-code');
-    const usernameInput = document.getElementById('username');
-    const passwordInput = document.getElementById('password');
+  const accessCodeInput = document.getElementById('accessCodeInput');
+  const accessBtn = document.getElementById('accessBtn');
+  const accessError = document.getElementById('accessError');
 
-    const chatContainer = document.getElementById('chat-container');
-    const messagesEl = document.getElementById('messages');
-    const chatForm = document.getElementById('chat-form');
-    const messageInput = document.getElementById('message-input');
-    const sendBtn = document.getElementById('send-btn');
+  const loginUserDiv = document.getElementById('loginUser');
+  const loginDiv = document.getElementById('login');
+  const usernameInput = document.getElementById('usernameInput');
+  const passwordInput = document.getElementById('passwordInput');
+  const loginBtn = document.getElementById('loginBtn');
+  const loginError = document.getElementById('loginError');
 
-    let ws = null;
-    let loggedUser = null;
+  const chatDiv = document.getElementById('chat');
+  const messagesDiv = document.getElementById('messages');
+  const messageInput = document.getElementById('messageInput');
+  const sendBtn = document.getElementById('sendBtn');
 
-    // Włącz/wyłącz przycisk wyślij w czacie
-    messageInput.addEventListener('input', () => {
-      sendBtn.disabled = messageInput.value.trim().length === 0;
-    });
+  let isAuthorized = false;
+  let isLoggedIn = false;
+  let username = '';
 
-    // Logowanie
-    loginForm.addEventListener('submit', e => {
-      e.preventDefault();
-      errorMsg.textContent = '';
+  // Połączenie i obsługa komunikacji
+  ws.addEventListener('open', () => {
+    console.log('Połączono z serwerem WebSocket');
+  });
 
-      const accessCode = accessCodeInput.value.trim();
-      const username = usernameInput.value.trim().toLowerCase();
-      const password = passwordInput.value;
+  ws.addEventListener('message', (event) => {
+    const data = JSON.parse(event.data);
 
-      if (accessCode !== ACCESS_CODE) {
-        errorMsg.textContent = "Nieprawidłowy kod dostępu!";
-        return;
-      }
-      if (!USERS.hasOwnProperty(username)) {
-        errorMsg.textContent = "Nieznany użytkownik!";
-        return;
-      }
-      if (USERS[username] !== password) {
-        errorMsg.textContent = "Nieprawidłowe hasło!";
-        return;
-      }
-
-      // Logowanie OK
-      loggedUser = username;
-      loginForm.style.display = 'none';
-      chatContainer.style.display = 'flex';
-
-      // Uruchom WebSocket i podłącz eventy
-      startWebSocket();
-
-      addMessage(`Witaj, ${loggedUser}!`, 'System');
-    });
-
-    // Funkcja dodająca wiadomość do DOM
-    function addMessage(text, user = 'Anonim', self = false) {
-      const msgEl = document.createElement('div');
-      msgEl.classList.add('message');
-      if(self) msgEl.classList.add('self');
-
-      const now = new Date();
-      const time = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-
-      msgEl.innerHTML = `
-        <div class="meta">
-          <span class="username">${escapeHtml(user)}</span>
-          <span class="time">${time}</span>
-        </div>
-        <div class="text">${escapeHtml(text)}</div>
-      `;
-      messagesEl.appendChild(msgEl);
-      messagesEl.scrollTop = messagesEl.scrollHeight;
-    }
-
-    // Escape HTML - zabezpieczenie przed XSS
-    function escapeHtml(unsafe) {
-      return unsafe.replace(/[&<"'>]/g, function(m) {
-        switch (m) {
-          case '&': return "&amp;";
-          case '<': return "&lt;";
-          case '>': return "&gt;";
-          case '"': return "&quot;";
-          case "'": return "&#039;";
-          default: return m;
+    switch(data.type) {
+      case 'access_code':
+        if(data.status === 'ok') {
+          isAuthorized = true;
+          loginDiv.style.display = 'none';
+          loginUserDiv.style.display = 'flex';
+          accessError.textContent = '';
+        } else {
+          accessError.textContent = 'Niepoprawny kod dostępu';
         }
-      });
-    }
+        break;
 
-    // Obsługa formularza wysyłania wiadomości
-    chatForm.addEventListener('submit', e => {
-      e.preventDefault();
-      const text = messageInput.value.trim();
-      if(text.length === 0) return;
-
-      // Wyślij do WebSocket
-      if(ws && ws.readyState === WebSocket.OPEN) {
-        const msgObj = {
-          type: "message",
-          user: loggedUser,
-          text: text
-        };
-        ws.send(JSON.stringify(msgObj));
-        messageInput.value = '';
-        sendBtn.disabled = true;
-
-        // Pokaż lokalnie od razu
-        addMessage(text, loggedUser, true);
-      } else {
-        addMessage('Brak połączenia z serwerem.', 'System');
-      }
-    });
-
-    // Uruchomienie WebSocket i obsługa komunikacji
-    function startWebSocket() {
-      // <-- Tu podaj swój adres WebSocket, np: -->
-      const ws = new WebSocket('wss://komunikator-web.onrender.com'); // użyj WSS (secure WS)
-      ws = new WebSocket(wsUrl);
-
-      ws.addEventListener('open', () => {
-        addMessage('Połączono z serwerem.', 'System');
-      });
-
-      ws.addEventListener('message', e => {
-        try {
-          const data = JSON.parse(e.data);
-          if(data.type === 'message' && data.user !== loggedUser) {
-            addMessage(data.text, data.user, false);
-          }
-        } catch(err) {
-          console.warn('Błąd parsowania wiadomości:', err);
+      case 'login':
+        if(data.status === 'ok') {
+          isLoggedIn = true;
+          username = usernameInput.value.trim();
+          loginUserDiv.style.display = 'none';
+          chatDiv.style.display = 'flex';
+          loginError.textContent = '';
+          sendBtn.disabled = false;
+          messageInput.focus();
+        } else {
+          loginError.textContent = 'Niepoprawne dane logowania';
         }
-      });
+        break;
 
-      ws.addEventListener('close', () => {
-        addMessage('Połączenie z serwerem zostało zamknięte.', 'System');
-      });
+      case 'history':
+        data.messages.forEach(msg => addMessage(msg.username, msg.text, msg.time));
+        break;
 
-      ws.addEventListener('error', () => {
-        addMessage('Błąd połączenia z serwerem.', 'System');
-      });
+      case 'message':
+        addMessage(data.username, data.text, data.time);
+        break;
     }
-  </script>
+  });
+
+  ws.addEventListener('close', () => {
+    alert('Połączenie z serwerem zostało zakończone.');
+  });
+
+  // Wysyłanie kodu dostępu
+  accessBtn.addEventListener('click', () => {
+    const code = accessCodeInput.value.trim();
+    if(code) {
+      ws.send(JSON.stringify({ type: 'access_code', code }));
+    }
+  });
+  accessCodeInput.addEventListener('keyup', (e) => {
+    if(e.key === 'Enter') accessBtn.click();
+  });
+
+  // Logowanie użytkownika
+  loginBtn.addEventListener('click', () => {
+    const user = usernameInput.value.trim();
+    const pass = passwordInput.value.trim();
+    if(user && pass) {
+      ws.send(JSON.stringify({ type: 'login', username: user, password: pass }));
+    }
+  });
+  passwordInput.addEventListener('keyup', (e) => {
+    if(e.key === 'Enter') loginBtn.click();
+  });
+
+  // Dodaj wiadomość do okna czatu
+  function addMessage(user, text, time) {
+    const messageEl = document.createElement('div');
+    messageEl.classList.add('message');
+
+    const headerEl = document.createElement('div');
+    headerEl.classList.add('message-header');
+
+    const usernameEl = document.createElement('span');
+    usernameEl.classList.add('username');
+    usernameEl.textContent = user;
+
+    const timeEl = document.createElement('span');
+    timeEl.classList.add('time');
+    timeEl.textContent = time;
+
+    headerEl.appendChild(usernameEl);
+    headerEl.appendChild(timeEl);
+
+    const textEl = document.createElement('div');
+    textEl.classList.add('message-text');
+    textEl.textContent = text;
+
+    messageEl.appendChild(headerEl);
+    messageEl.appendChild(textEl);
+
+    messagesDiv.appendChild(messageEl);
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
+  }
+
+  // Wysyłanie wiadomości
+  sendBtn.addEventListener('click', () => {
+    const text = messageInput.value.trim();
+    if(text && isLoggedIn) {
+      ws.send(JSON.stringify({ type: 'message', text }));
+      messageInput.value = '';
+      messageInput.focus();
+    }
+  });
+
+  messageInput.addEventListener('keyup', (e) => {
+    if(e.key === 'Enter' && !sendBtn.disabled) {
+      sendBtn.click();
+    }
+  });
+</script>
 </body>
 </html>
