--- a/public/index.html
+++ b/public/index.html
@@ -2,355 +2,264 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bezpieczny Komunikator - Styl Discord</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bezpieczny Komunikator</title>
   <style>
     * {
       box-sizing: border-box;
     }
+
     body {
       margin: 0;
       padding: 0;
-      background-color: #36393f;
+      background: #2c2f33;
+      font-family: "Segoe UI", sans-serif;
       color: #dcddde;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
       height: 100vh;
-      overflow: hidden;
-    }
-    #login, #loginUser {
-      margin: auto;
-      background-color: #2f3136;
-      border-radius: 8px;
-      padding: 40px 30px;
-      width: 360px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       display: flex;
-      flex-direction: column;
       align-items: center;
+      justify-content: center;
     }
-    h3 {
-      color: #fff;
-      margin-bottom: 24px;
-      font-weight: 700;
-      font-size: 1.6rem;
-      user-select: none;
+
+    .container {
+      width: 100%;
+      max-width: 420px;
+      background: #23272a;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+      animation: fadeIn 0.5s ease;
     }
+
+    h2 {
+      text-align: center;
+      color: #ffffff;
+      margin-bottom: 20px;
+    }
+
     input {
       width: 100%;
-      background-color: #202225;
+      padding: 12px;
+      margin: 10px 0;
       border: none;
       border-radius: 4px;
-      padding: 12px 15px;
-      margin-bottom: 16px;
-      color: #dcddde;
-      font-size: 1rem;
-      transition: background-color 0.15s ease;
+      background-color: #2c2f33;
+      color: #ffffff;
+      transition: background-color 0.3s ease;
     }
-    input::placeholder {
-      color: #72767d;
-    }
+
     input:focus {
       outline: none;
-      background-color: #2c2f33;
+      background-color: #3a3d41;
     }
+
     button {
       width: 100%;
-      background-color: #5865f2;
-      color: white;
-      font-weight: 700;
-      font-size: 1rem;
+      padding: 12px;
       border: none;
       border-radius: 4px;
-      padding: 12px 0;
+      background-color: #5865f2;
+      color: white;
+      font-weight: bold;
       cursor: pointer;
-      user-select: none;
-      transition: background-color 0.2s ease;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
       background-color: #4752c4;
     }
-    button:disabled {
-      opacity: 0.6;
-      cursor: default;
-    }
-    #accessError, #loginError {
-      width: 100%;
-      text-align: center;
+
+    .error {
       color: #f04747;
-      margin-top: 8px;
-      font-weight: 600;
       font-size: 0.9rem;
-      min-height: 1.1em;
-      user-select: none;
+      text-align: center;
+      min-height: 1.2em;
     }
+
     #chat {
       display: none;
+      flex-direction: column;
       height: 100vh;
       width: 100vw;
-      display: flex;
-      flex-direction: column;
-      background-color: #36393f;
+      background-color: #2f3136;
     }
+
     #messages {
       flex-grow: 1;
-      overflow-y: auto;
       padding: 20px;
-      scroll-behavior: smooth;
-      scrollbar-width: thin;
-      scrollbar-color: #202225 transparent;
+      overflow-y: auto;
     }
-    #messages::-webkit-scrollbar {
-      width: 8px;
-      background-color: transparent;
-    }
-    #messages::-webkit-scrollbar-thumb {
-      background-color: #202225;
-      border-radius: 4px;
-    }
+
     .message {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 16px;
-      max-width: 75%;
-      line-height: 1.3;
+      margin-bottom: 10px;
+      animation: slideUp 0.2s ease;
     }
-    .username {
-      font-weight: 600;
+
+    .message .user {
       color: #4f90e2;
-      margin-bottom: 2px;
-      user-select: text;
+      font-weight: bold;
     }
-    .time {
-      font-size: 0.75rem;
-      color: #72767d;
-      margin-left: 8px;
-      user-select: none;
-    }
-    .message-text {
-      background-color: #2f3136;
-      padding: 8px 12px;
+
+    .message .text {
+      background: #40444b;
+      padding: 10px;
       border-radius: 6px;
-      color: #dcddde;
-      word-wrap: break-word;
-      user-select: text;
-      white-space: pre-line;
+      margin-top: 4px;
+      color: white;
     }
-    .message-header {
-      display: flex;
-      align-items: center;
-    }
+
     #inputContainer {
       display: flex;
-      padding: 16px 20px;
-      background-color: #40444b;
-      border-top: 1px solid #2f3136;
+      background: #40444b;
+      padding: 10px;
     }
+
     #messageInput {
       flex-grow: 1;
-      background-color: #292b2f;
       border: none;
+      padding: 10px;
+      background: #2f3136;
+      color: white;
       border-radius: 4px 0 0 4px;
-      padding: 12px 15px;
-      color: #dcddde;
-      font-size: 1rem;
-      user-select: text;
-      transition: background-color 0.15s ease;
     }
-    #messageInput::placeholder {
-      color: #72767d;
-    }
-    #messageInput:focus {
-      outline: none;
-      background-color: #3a3c42;
-    }
+
     #sendBtn {
       background-color: #5865f2;
       border: none;
-      border-radius: 0 4px 4px 0;
       padding: 0 20px;
-      cursor: pointer;
-      font-weight: 700;
       color: white;
-      transition: background-color 0.2s ease;
-      user-select: none;
-      font-size: 1rem;
+      border-radius: 0 4px 4px 0;
+      font-weight: bold;
+      cursor: pointer;
     }
-    #sendBtn:hover:enabled {
-      background-color: #4752c4;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    #sendBtn:disabled {
-      opacity: 0.6;
-      cursor: default;
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <!-- Ekran logowania do kodu dostępu -->
-  <div id="login">
-    <h3>Podaj kod dostępu</h3>
-    <input id="accessCodeInput" type="password" placeholder="Kod dostępu" autocomplete="off" />
-    <button id="accessBtn">Dalej</button>
-    <div id="accessError"></div>
-  </div>
 
-  <!-- Ekran logowania użytkownika -->
-  <div id="loginUser" style="display:none;">
-    <h3>Logowanie</h3>
-    <input id="usernameInput" type="text" placeholder="Nazwa użytkownika" autocomplete="username" />
-    <input id="passwordInput" type="password" placeholder="Hasło" autocomplete="current-password" />
-    <button id="loginBtn">Zaloguj</button>
-    <div id="loginError"></div>
-  </div>
+<div class="container" id="accessScreen">
+  <h2>Podaj kod dostępu</h2>
+  <input type="password" id="accessCodeInput" placeholder="Kod dostępu">
+  <button id="accessBtn">Dalej</button>
+  <div class="error" id="accessError"></div>
+</div>
 
-  <!-- Główny czat -->
-  <div id="chat">
-    <div id="messages" role="log" aria-live="polite" aria-relevant="additions"></div>
-    <div id="inputContainer">
-      <input id="messageInput" type="text" placeholder="Napisz wiadomość..." autocomplete="off" />
-      <button id="sendBtn" disabled>Wyślij</button>
-    </div>
+<div class="container" id="loginScreen" style="display:none;">
+  <h2>Logowanie</h2>
+  <input type="text" id="usernameInput" placeholder="Nazwa użytkownika">
+  <input type="password" id="passwordInput" placeholder="Hasło">
+  <button id="loginBtn">Zaloguj</button>
+  <div class="error" id="loginError"></div>
+</div>
+
+<div id="chat">
+  <div id="messages"></div>
+  <div id="inputContainer">
+    <input type="text" id="messageInput" placeholder="Napisz wiadomość...">
+    <button id="sendBtn">Wyślij</button>
   </div>
+</div>
 
 <script>
-  const ws = new WebSocket('wss://komunikator-web.host.replace(/^https?/, '') + ':3000');
-  // Jeśli backend masz na osobnym porcie, to podaj tam adres WebSocket.
+  const ws = new WebSocket("wss://komunikator-web.onrender.com");
 
-  const accessCodeInput = document.getElementById('accessCodeInput');
-  const accessBtn = document.getElementById('accessBtn');
-  const accessError = document.getElementById('accessError');
+  const accessCodeInput = document.getElementById("accessCodeInput");
+  const accessBtn = document.getElementById("accessBtn");
+  const accessError = document.getElementById("accessError");
+  const loginScreen = document.getElementById("loginScreen");
+  const accessScreen = document.getElementById("accessScreen");
 
-  const loginUserDiv = document.getElementById('loginUser');
-  const loginDiv = document.getElementById('login');
-  const usernameInput = document.getElementById('usernameInput');
-  const passwordInput = document.getElementById('passwordInput');
-  const loginBtn = document.getElementById('loginBtn');
-  const loginError = document.getElementById('loginError');
+  const usernameInput = document.getElementById("usernameInput");
+  const passwordInput = document.getElementById("passwordInput");
+  const loginBtn = document.getElementById("loginBtn");
+  const loginError = document.getElementById("loginError");
 
-  const chatDiv = document.getElementById('chat');
-  const messagesDiv = document.getElementById('messages');
-  const messageInput = document.getElementById('messageInput');
-  const sendBtn = document.getElementById('sendBtn');
+  const chat = document.getElementById("chat");
+  const messages = document.getElementById("messages");
+  const messageInput = document.getElementById("messageInput");
+  const sendBtn = document.getElementById("sendBtn");
 
-  let isAuthorized = false;
-  let isLoggedIn = false;
-  let username = '';
+  let username = "";
 
-  // Połączenie i obsługa komunikacji
-  ws.addEventListener('open', () => {
-    console.log('Połączono z serwerem WebSocket');
-  });
-
-  ws.addEventListener('message', (event) => {
+  ws.onmessage = (event) => {
     const data = JSON.parse(event.data);
-
-    switch(data.type) {
-      case 'access_code':
-        if(data.status === 'ok') {
-          isAuthorized = true;
-          loginDiv.style.display = 'none';
-          loginUserDiv.style.display = 'flex';
-          accessError.textContent = '';
-        } else {
-          accessError.textContent = 'Niepoprawny kod dostępu';
-        }
-        break;
-
-      case 'login':
-        if(data.status === 'ok') {
-          isLoggedIn = true;
-          username = usernameInput.value.trim();
-          loginUserDiv.style.display = 'none';
-          chatDiv.style.display = 'flex';
-          loginError.textContent = '';
-          sendBtn.disabled = false;
-          messageInput.focus();
-        } else {
-          loginError.textContent = 'Niepoprawne dane logowania';
-        }
-        break;
-
-      case 'history':
-        data.messages.forEach(msg => addMessage(msg.username, msg.text, msg.time));
-        break;
-
-      case 'message':
-        addMessage(data.username, data.text, data.time);
-        break;
+    if (data.type === "access_code") {
+      if (data.status === "ok") {
+        accessScreen.style.display = "none";
+        loginScreen.style.display = "block";
+        accessError.textContent = "";
+      } else {
+        accessError.textContent = "Niepoprawny kod dostępu.";
+      }
     }
-  });
 
-  ws.addEventListener('close', () => {
-    alert('Połączenie z serwerem zostało zakończone.');
-  });
+    if (data.type === "login") {
+      if (data.status === "ok") {
+        loginScreen.style.display = "none";
+        chat.style.display = "flex";
+        loginError.textContent = "";
+        username = usernameInput.value;
+      } else {
+        loginError.textContent = "Błędne dane logowania.";
+      }
+    }
 
-  // Wysyłanie kodu dostępu
-  accessBtn.addEventListener('click', () => {
+    if (data.type === "message") {
+      const div = document.createElement("div");
+      div.classList.add("message");
+
+      const user = document.createElement("div");
+      user.classList.add("user");
+      user.textContent = data.username;
+
+      const text = document.createElement("div");
+      text.classList.add("text");
+      text.textContent = data.text;
+
+      div.appendChild(user);
+      div.appendChild(text);
+      messages.appendChild(div);
+      messages.scrollTop = messages.scrollHeight;
+    }
+  };
+
+  accessBtn.onclick = () => {
     const code = accessCodeInput.value.trim();
-    if(code) {
-      ws.send(JSON.stringify({ type: 'access_code', code }));
+    if (!code) {
+      accessError.textContent = "Wpisz kod dostępu!";
+      return;
     }
-  });
-  accessCodeInput.addEventListener('keyup', (e) => {
-    if(e.key === 'Enter') accessBtn.click();
-  });
+    ws.send(JSON.stringify({ type: "access_code", code }));
+  };
 
-  // Logowanie użytkownika
-  loginBtn.addEventListener('click', () => {
+  loginBtn.onclick = () => {
     const user = usernameInput.value.trim();
     const pass = passwordInput.value.trim();
-    if(user && pass) {
-      ws.send(JSON.stringify({ type: 'login', username: user, password: pass }));
+    if (!user || !pass) {
+      loginError.textContent = "Wpisz dane logowania!";
+      return;
     }
-  });
-  passwordInput.addEventListener('keyup', (e) => {
-    if(e.key === 'Enter') loginBtn.click();
-  });
+    ws.send(JSON.stringify({ type: "login", username: user, password: pass }));
+  };
 
-  // Dodaj wiadomość do okna czatu
-  function addMessage(user, text, time) {
-    const messageEl = document.createElement('div');
-    messageEl.classList.add('message');
-
-    const headerEl = document.createElement('div');
-    headerEl.classList.add('message-header');
-
-    const usernameEl = document.createElement('span');
-    usernameEl.classList.add('username');
-    usernameEl.textContent = user;
-
-    const timeEl = document.createElement('span');
-    timeEl.classList.add('time');
-    timeEl.textContent = time;
-
-    headerEl.appendChild(usernameEl);
-    headerEl.appendChild(timeEl);
-
-    const textEl = document.createElement('div');
-    textEl.classList.add('message-text');
-    textEl.textContent = text;
-
-    messageEl.appendChild(headerEl);
-    messageEl.appendChild(textEl);
-
-    messagesDiv.appendChild(messageEl);
-    messagesDiv.scrollTop = messagesDiv.scrollHeight;
-  }
-
-  // Wysyłanie wiadomości
-  sendBtn.addEventListener('click', () => {
+  sendBtn.onclick = () => {
     const text = messageInput.value.trim();
-    if(text && isLoggedIn) {
-      ws.send(JSON.stringify({ type: 'message', text }));
-      messageInput.value = '';
-      messageInput.focus();
-    }
-  });
+    if (!text) return;
+    ws.send(JSON.stringify({ type: "message", text }));
+    messageInput.value = "";
+  };
 
-  messageInput.addEventListener('keyup', (e) => {
-    if(e.key === 'Enter' && !sendBtn.disabled) {
-      sendBtn.click();
-    }
+  messageInput.addEventListener("keypress", (e) => {
+    if (e.key === "Enter") sendBtn.click();
   });
 </script>
 </body>
