--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,6 @@
     }
 
     button {
-      width: 100%;
       padding: 12px;
       border: none;
       border-radius: 4px;
@@ -82,16 +81,20 @@
       height: 100vh;
       width: 100vw;
       background-color: #2f3136;
+      padding: 10px;
     }
 
     #messages {
       flex-grow: 1;
       padding: 20px;
+      margin-bottom: 10px;
       overflow-y: auto;
+      border-radius: 8px;
+      background: #23272a;
     }
 
     .message {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       animation: slideUp 0.2s ease;
     }
 
@@ -110,27 +113,33 @@
 
     #inputContainer {
       display: flex;
-      background: #40444b;
-      padding: 10px;
+      align-items: center;
+      background: transparent;
+      padding: 5px 10px;
+      gap: 10px;
     }
 
     #messageInput {
       flex-grow: 1;
       border: none;
-      padding: 10px;
-      background: #2f3136;
+      padding: 14px;
+      background: #40444b;
       color: white;
-      border-radius: 4px 0 0 4px;
+      border-radius: 8px;
+      font-size: 1rem;
     }
 
     #sendBtn {
       background-color: #5865f2;
-      border: none;
-      padding: 0 20px;
-      color: white;
-      border-radius: 0 4px 4px 0;
-      font-weight: bold;
-      cursor: pointer;
+      width: 46px;
+      height: 46px;
+      min-width: 46px;
+      border-radius: 50%;
+      font-size: 0.9rem;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     @keyframes fadeIn {
@@ -165,7 +174,7 @@
   <div id="messages"></div>
   <div id="inputContainer">
     <input type="text" id="messageInput" placeholder="Napisz wiadomość...">
-    <button id="sendBtn">Wyślij</button>
+    <button id="sendBtn">➤</button>
   </div>
 </div>
 
