--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bezpieczny Komunikator</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       padding: 0;
@@ -20,7 +17,6 @@
       align-items: center;
       justify-content: center;
     }
-
     .container {
       width: 100%;
       max-width: 420px;
@@ -30,14 +26,8 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.3);
       animation: fadeIn 0.5s ease;
     }
-
-    h2 {
-      text-align: center;
-      color: #ffffff;
-      margin-bottom: 20px;
-    }
-
-    input {
+    h2 { text-align: center; color: #ffffff; margin-bottom: 20px; }
+    input[type="text"], input[type="password"] {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
@@ -47,12 +37,7 @@
       color: #ffffff;
       transition: background-color 0.3s ease;
     }
-
-    input:focus {
-      outline: none;
-      background-color: #3a3d41;
-    }
-
+    input:focus { outline: none; background-color: #3a3d41; }
     button {
       padding: 12px;
       border: none;
@@ -63,18 +48,13 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
-    button:hover {
-      background-color: #4752c4;
-    }
-
+    button:hover { background-color: #4752c4; }
     .error {
       color: #f04747;
       font-size: 0.9rem;
       text-align: center;
       min-height: 1.2em;
     }
-
     #chat {
       display: none;
       flex-direction: column;
@@ -83,7 +63,6 @@
       background-color: #2f3136;
       padding: 10px;
     }
-
     #messages {
       flex-grow: 1;
       padding: 20px;
@@ -92,25 +71,22 @@
       border-radius: 8px;
       background: #23272a;
     }
-
     .message {
       margin-bottom: 15px;
       animation: slideUp 0.2s ease;
     }
-
     .message .user {
       color: #4f90e2;
       font-weight: bold;
     }
-
     .message .text {
       background: #40444b;
       padding: 10px;
       border-radius: 6px;
       margin-top: 4px;
       color: white;
+      word-break: break-word;
     }
-
     #inputContainer {
       display: flex;
       align-items: center;
@@ -118,7 +94,6 @@
       padding: 5px 10px;
       gap: 10px;
     }
-
     #messageInput {
       flex-grow: 1;
       border: none;
@@ -128,7 +103,6 @@
       border-radius: 8px;
       font-size: 1rem;
     }
-
     #sendBtn {
       background-color: #5865f2;
       width: 46px;
@@ -141,12 +115,30 @@
       align-items: center;
       justify-content: center;
     }
-
+    #imageBtn {
+      background-color: #4f545c;
+      width: 46px;
+      height: 46px;
+      min-width: 46px;
+      border-radius: 50%;
+      font-size: 1.2rem;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #imageInput {
+      display: none;
+    }
+    img.chat-image {
+      max-width: 100%;
+      border-radius: 6px;
+      margin-top: 5px;
+    }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes slideUp {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -175,6 +167,8 @@
   <div id="inputContainer">
     <input type="text" id="messageInput" placeholder="Napisz wiadomość...">
     <button id="sendBtn">➤</button>
+    <input type="file" id="imageInput" accept="image/*">
+    <button id="imageBtn">📷</button>
   </div>
 </div>
 
@@ -196,6 +190,9 @@
   const messages = document.getElementById("messages");
   const messageInput = document.getElementById("messageInput");
   const sendBtn = document.getElementById("sendBtn");
+
+  const imageInput = document.getElementById("imageInput");
+  const imageBtn = document.getElementById("imageBtn");
 
   let username = "";
 
@@ -232,7 +229,15 @@
 
       const text = document.createElement("div");
       text.classList.add("text");
-      text.textContent = data.text;
+
+      if (data.image) {
+        const img = document.createElement("img");
+        img.src = data.image;
+        img.className = "chat-image";
+        text.appendChild(img);
+      } else {
+        text.textContent = data.text;
+      }
 
       div.appendChild(user);
       div.appendChild(text);
@@ -270,6 +275,22 @@
   messageInput.addEventListener("keypress", (e) => {
     if (e.key === "Enter") sendBtn.click();
   });
+
+  imageBtn.onclick = () => {
+    imageInput.click();
+  };
+
+  imageInput.onchange = () => {
+    const file = imageInput.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.onload = () => {
+      const base64 = reader.result;
+      ws.send(JSON.stringify({ type: "message", image: base64 }));
+    };
+    reader.readAsDataURL(file);
+  };
 </script>
 </body>
 </html>
